target/hello-world-microprofile/WEB-INF/classes/META-INF/fabric8/openshift/hello-world-microprofile-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-world-microprofile
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.abu.hello
  name: hello-world-microprofile
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-world-microprofile
